# viny-markdown

./: .gitignore  README.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  release.yml
apps/desktop/: index.html  package.json  vite.config.ts
apps/desktop/src/: App.svelte  main.ts  styles.css
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/src/: crypto.rs  db.rs  error.rs  export.rs  lib.rs  main.rs  models.rs  schema.sql  search.rs  sync.rs
apps/desktop/src-tauri/src/bindings/: CreateNotebookInput.ts  NoteStatus.ts  SyncState.ts  Tag.ts  UpdateNoteInput.ts  UpdateNotebookInput.ts
apps/desktop/src-tauri/src/commands/: encryption.rs  mod.rs  notebooks.rs  notes.rs  reminders.rs  tags.rs
apps/desktop/src-tauri/src/lib/bindings/: CreateTagInput.ts  ListNotesFilter.ts  LocalSyncState.ts  Note.ts  Notebook.ts  SyncConflict.ts  SyncPayload.ts  SyncRequest.ts  SyncResult.ts  SyncStats.ts  UpdateTagInput.ts
apps/desktop/src-tauri/tests/: integration_tests.rs
apps/desktop/src/components/: ArchiveView.svelte  CalendarView.svelte  CommandPalette.svelte  ConfirmDialog.svelte  ConflictsModal.svelte  CustomizeShortcutsModal.svelte  Editor.svelte  EmptyState.svelte  ExportModal.svelte  ExportPDFModal.svelte  FocusModeOverlay.svelte  (+23 more)
apps/server/: Cargo.toml
apps/server/src/: db.rs  error.rs  handlers.rs  main.rs  models.rs
apps/web/: package.json  svelte.config.js
apps/web/src/: app.css  app.html  service-worker.ts
apps/web/static/: manifest.json
docs/: VINY-vNext-SPEC.md
(+73 files in other folders)
